# dbt

./: Readme.md  course-resources.md  terraform-385919-070a676e5fbd.json
dbt-3.9.10/: pyvenv.cfg
dbt-gcp/dbt-gcp-project/: pyproject.toml
dbt-gcp/dbt-gcp-project/analytics_gcp/analytics_gcp/: dbt_project.yml  strange-math-385919-aaf335b0c34b.json
dbt-gcp/dbt-gcp-project/analytics_gcp/analytics_gcp/models/bank/: bank_subset.sql
dbt-gcp/dbt-gcp-project/analytics_gcp/analytics_gcp/models/iris/: iris1.sql
dbt-gcp/dbt-gcp-project/analytics_gcp/analytics_gcp/models/sources/: test.yml  test123.yml
dbt-unit-testing/: packages.yml
dbtlearn/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbtlearn/models/: dashboards.yml  schema.yml  sources.yml
dbtlearn/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql
dbtlearn/models/fct/: fct_reviews.sql
dbtlearn/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
dbtlearn/tests/: consistent_created_at.sql
dbtlearn/tests/unit/: tests_dim_listings_w_hosts.sql
